# finsight

./: .codespellrc  .gitignore  .gitleaks.toml  .hadolint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  cliff.toml  commitlint.config.cjs  cspell.json  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  mkdocs.yml  openapi.json  pyproject.toml  requirements-dev.txt  requirements.txt  whitelist.py
backend/alembic/: env.py
backend/alembic/versions/: cd60ccb67194_initial_schema.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  _hydrate.py  companies.py  documents.py  ratios.py  serializers.py  upload.py
backend/app/db/: database.py  models.py
backend/app/extraction/: __init__.py  pipeline.py  prompts.py  schema.py  service.py
backend/app/llm/: __init__.py  base.py  factory.py
backend/app/llm/providers/: __init__.py  anthropic.py  ollama.py  openai.py
backend/app/ocr/: __init__.py  base.py  engine.py  factory.py
backend/app/ratios/: __init__.py  base.py  definitions.py  engine.py
backend/app/schemas/: __init__.py  financials.py
backend/app/validation/: __init__.py  engine.py  identities.py
backend/docs/: index.md
backend/docs/reference/: ratios.md  schemas.md  validation.md
backend/scripts/: __init__.py  docker-entrypoint.sh  export_openapi.py
backend/tests/: conftest.py  test_api_e2e.py  test_api_fuzz.py  test_env_drift.py  test_extraction_pipeline.py  test_migrations.py  test_ratios.py  test_ratios_property.py  test_schema_strict.py  test_service.py  test_validation.py
frontend/: .dockerignore  .prettierignore  Dockerfile  eslint.config.js  index.html  knip.json  lighthouserc.json  nginx.conf  package-lock.json  package.json  panda.config.ts  playwright.config.ts  tsconfig.e2e.json  tsconfig.json  typedoc.json  vitest.config.ts
frontend/e2e/: app.spec.ts  extraction.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  openapi.d.ts  types.ts
frontend/src/components/: AccountingChecksPanel.tsx  Nav.tsx  RatioCard.tsx  RatioGrid.tsx  StatementEditor.tsx  StatusBadge.tsx
frontend/src/pages/: CompaniesPage.tsx  CompanyDetailPage.tsx  DocumentsPage.tsx  ReviewPage.tsx  UploadPage.tsx
frontend/src/test/: AccountingChecksPanel.test.tsx  RatioCard.test.tsx  RatioGrid.test.tsx  a11y.test.tsx  formatRatioValue.test.ts
scripts/: fetch_e2e_fixture.py  quickstart.sh  smoke.sh
